Experience API alpha for dice rolls
